Update ReadNotificationsData to use UUIDs instead of Strings for notification IDs